<resources>
    <string name="app_name">Для Папы</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_item_play">Новая игра</string>
    <string name="drawer_item_settings">Настройки</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_exit">Выход</string>
    <string name="drawer_item_contact">Контакты</string>
    <string name="Contact">Developed by Lego</string>
    <string name="title_activity_play">PlayActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lego_amp_panda"><![CDATA[Lego & Panda]]></string>
    <string name="developed_by">Developed by</string>
    <string name="firstPick">%1$d</string>
    <string name="secondPick">%1$d</string>
    <string name="game_rules_title">Правила игры!</string>
    <string name="game_stats_title">Статистика игры</string>
    <string name="ok">Ок</string>
    <string name="game_rules">C поля нужно выбирать кости сумма цифр которых равна 12. Победа засчитывается тогда, когда на поле не осталось костей.</string>
    <string name="new_game">Новая игра</string>
    <string name="param">Настройки</string>
    <string name="stats">Статистика</string>
    <string name="help">Помощь</string>
    <string name="exit">Выход</string>
    <string name="clear">Очистить</string>
    <string name="played">Вы сыграли</string>
    <string name="games">игр.</string>
    <string name="wins">Вы выйграли</string>
    <string name="win">Поздравляю!</string>
    <string name="game_win">Вы выиграли игру!</string>
    <string name="more">ещё</string>

</resources>
