<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/game"
            android:title="@string/new_game" />
    </group>

    <item android:title="@string/param">
        <menu>
            <item
                android:id="@+id/nav_stats"
                android:icon="@drawable/ic_menu_stats"
                android:title="@string/stats" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/help" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_exit"
            android:title="@string/exit" />
    </group>

</menu>
